# MCU_OscilloGen

./: README.md
Project/: .cproject  .mxproject  .project  OscilloGen.ioc
Project/Core++/Bsp/: Bsp.cpp  Bsp.hpp  BspBM.cpp  BspBM.hpp  BspInterface.hpp
Project/Core++/Bsp/Inc/: Bsp.hpp  BspPic.hpp  BspStm.hpp  IBsp.hpp
Project/Core++/Bsp/Src/: BspPic.cpp  BspStm.cpp
Project/Core++/Inc/: AdcExtern.hpp  AnalyzerExtern.hpp  Bootloader.hpp  DacExtern.hpp  FuncAnalyzer.hpp  FuncGenerator.hpp  Lcd.hpp  MainCpp.hpp  Oscilloscope.hpp  SerialConnection.hpp  asmFunc.h
Project/Core++/Src/: AdcExtern.cpp  AnalyzerExtern.cpp  Bootloader.cpp  DacExtern.cpp  FuncAnalyser.cpp  FuncGenerator.cpp  Lcd.cpp  MainCpp.cpp  Oscilloscope.cpp  SerialConnection.cpp  asmFunc.s
Project/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Project/Core/Src/: adc.c  cordic.c  dac.c  dma.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
Project/Debug/: OscilloGen.list  makefile  objects.list  sources.mk
Project/Debug/Core++/Bsp/: Bsp.cyclo  subdir.mk
Project/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
UTests/: AnalyzerExtern_Test.cpp  CMakeLists.txt  DacExtern_Test.cpp  FuncAnalyzer_Test.cpp  FuncGenerator_Test.cpp  SerialConnection_Test.cpp  UTests.sln  UTests.vcxproj  UTests.vcxproj.filters  test.cpp
UTests/Mocks/: Bsp.cpp  Bsp.hpp  MockHAL.hpp
UTests/Tests/: AnalyzerExtern_Test.cpp  DacExtern_Test.cpp  FuncAnalyzer_Test.cpp  FuncGenerator_Test.cpp  SerialConnection_Test.cpp
UTests/UTests/x64/Debug/: UTests.exe.recipe
(+26 files in other folders)
